pod-lb/manifests/west/frontend.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: frontend
data:
 nginx.conf: |-
  pid /tmp/pid;
  error_log stderr;
  events {}
  http {
    client_body_temp_path /tmp/client_temp;
    proxy_temp_path       /tmp/proxy_temp_path;
    fastcgi_temp_path     /tmp/fastcgi_temp;
    uwsgi_temp_path       /tmp/uwsgi_temp;
    scgi_temp_path        /tmp/scgi_temp;

    server {
      listen 8080;
      set $east "east";
      set $west "west";
      resolver kube-dns.kube-system.svc.cluster.local;

      location / {
        proxy_pass http://podinfo.test.svc.cluster.local:9898/;
        proxy_http_version 1.1;
      }
      location /east {
        proxy_pass http://podinfo-$east.test.svc.cluster.local:9898/;
        proxy_http_version 1.1;
      }
      location /west {
        proxy_pass http://podinfo-$west.test.svc.cluster.local:9898/;
        proxy_http_version 1.1;
      }
    }
  }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: cfg
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-conf-d
              mountPath: /etc/nginx/conf.d
            - name: nginx-tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
        - image: buoyantio/slow_cooker:1.2.0
          name: internal
          env:
            - name: QPS
              value: "1"
            - name: CONCURRENCY
              value: "1"
            - name: SERVICE
              value: podinfo

          command: ["/bin/sh", "-c"]
          args:
            - |-
              slow_cooker -qps ${QPS} -concurrency ${CONCURRENCY} http://${SERVICE}:9898
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
          securityContext:
            runAsUser: 1337
        - image: buoyantio/slow_cooker:1.2.0
          name: external
          env:
            - name: QPS
              value: "1"
            - name: CONCURRENCY
              value: "1"
            - name: SERVICE
              value: podinfo-east

          command: ["/bin/sh", "-c"]
          args:
            - |-
              slow_cooker -qps ${QPS} -concurrency ${CONCURRENCY} http://${SERVICE}:9898
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
          securityContext:
            runAsUser: 1337
      volumes:
        - name: cfg
          configMap:
            name: frontend
        - name: nginx-conf-d
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: service
    port: 8080
  selector:
    app: frontend
---
